# synthwave

./: .gitignore  CMakeLists.txt  README.md  wavetable_gen.py
src/: ADSR.cpp  ADSR.h  Synthesizer.cpp  Synthesizer.h  Voice.cpp  Voice.h  Wavetable.cpp  Wavetable.h  main.cpp
